--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,4 +28,12 @@
         <servlet-name>SaveDoctorServlet</servlet-name>
         <url-pattern>/save_doctor</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>SavePatientAllergyServlet</servlet-name>
+        <servlet-class>servlet.SavePatientAllergyServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SavePatientAllergyServlet</servlet-name>
+        <url-pattern>/save_patient_allergy</url-pattern>
+    </servlet-mapping>
 </web-app>
